---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: code should not abort
   ┌─ /NORMALIZED_HOME/.move/https___github_com_asymptotic-code_sui_git_more/crates/sui-framework/packages/sui-framework/sources/versioned.move:52:5
   │
52 │     dynamic_field::borrow_mut(&mut self.id, self.version)
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/issue-222.move:29: foo_spec
